# elyos-chat

./: .env.example  .gitignore  API_DISCOVERIES.md  README.md  api_client.py  llm.py  main.py  pyproject.toml  requirements.txt  tools.py
tests/: conftest.py  test_dispatch.py  test_tools.py
